# genweb

./: CONTRIBUTION.md  Makefile  README.md  all scores.txt  people ids.txt  pr_build.py  pyproject.toml  requirements.txt  results.txt
.github/workflows/: CI.yml  semgrep.yml
genweb/: README.md  __init__.py  alpha_toc.html.mako  artifact_editor.py  aws.py  build_web_pages.py  cleanup.py  database.py  generate_alpha_toc.py  generate_html.py  genweb.py  genweb.yml  inventory.py  metadata.py  metaphone.py  parse_metadata.py  people.py  relationships.py  rmagic.py  storage.py  table.py  template.py  webapi_v1.py  webserver.py
genweb/data/: editor.html  editor.js  styles.css
genweb/templates/: actions.js  alpha_toc.html.mako  href.html.mako  inline.html.mako  nav_area.html.mako  person.html.mako  person_index.html.mako  picture.html.mako  top_level.html.mako  video.js
tests/: test_alpha_toc.py  test_aws.py  test_cleanup.py  test_database.py  test_generate_html.py  test_genweb.py  test_inventory.py  test_metadata.py  test_metaphone.py  test_parse_metdata.py  test_people.py  test_relationships.py  test_storage.py  test_table.py  test_template.py  test_webapi_v1.py
tests/data/: README.md  REMARR.GED  SSMARR.GED  aliases.yml  bad.xml  example.yml  layered.2024-01-01.yml  layered.2024-01-05.yml  test.html.mako  test.xml
